[package]
name = "play-wt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = ["full"] }
wtransport = "0.1.10"
thiserror = "1.0"
data-encoding = "2.5.0"
anyhow = "1.0.79"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
notify-debouncer-full = "0.3.1"
blake3 = { version = "1.5.0", features = ["mmap", "rayon"]}