[package]
name = "play-wt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.39.3", features = ["full"] }
thiserror = "1.0"
data-encoding = "2.5.0"
anyhow = "1.0.79"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
blake3 = { version = "1.5.4", features = ["mmap", "rayon"]}
serde = { version = "1.0", features = ["derive"] }
cbor4ii = { version = "0.3.3", features = ["use_std", "serde1"]}
const_format = "0.2.32"
serde_repr = "0.1.18"

# net
wtransport = "0.2.0"
igd-next = "0.14.3"
local-ip-address = "0.5.3"
netdev = "0.30"

# files
# redb = "2.1.2"
serde_bytes = "0.11.15"
mime_guess = "2.0"
notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
notify-debouncer-full = "0.3.1"

# db
## sqlx MUST be in lockstep version. https://docs.rs/sqlx/0.8.1/sqlx/sqlite/index.html
sqlx = { version = "=0.8.1", features = [ "runtime-tokio", "sqlite"] }
rusqlite = "=0.32.1"

# TLS cert rotation things
rcgen = "0.13.1"
time = "0.3.36"
csv = "=1.3.0"

# 
ed25519-dalek = {version = "2.1.1", features = ["rand_core", "pem"]}
rand = {version = "0.8.5"}
cuid2 = "0.1.3"
